# ralcgm

./: .gitignore  CGMconfig  CMakeLists.txt
docs/: ralcgm.ps
examples/: testcgm.c
include/: mach.h  mc_linux.h
src/: Makefile  cgmlib.c  cgmobin.c  cgmoxw.c  cgmrand.c  genbez.c  genher.c
src/common/: CMakeLists.txt
src/common/include/: cgmbez.h  cgmerr.h  cgmfile.h  cgmher.h  cgmmach.h  cgmpar.h  cgmtext.h  cgmtypes.h  cgmubez.h  cgmuher.h  mach.h
src/common/src/: cgmerr.c  cgmfile.c
src/genbez/: CMakeLists.txt  genbez.c
src/genher/: CMakeLists.txt  genher.c
src/ralcgm/: CMakeLists.txt
src/ralcgm/include/: cgmatt.h  cgmcell.h  cgmcolr.h  cgmelem.h  cgmerr.h  cgmfile.h  cgmfill.h  cgmfont.h  cgmgdp.h  cgmgraph.h  cgmin.h  cgminit.h  cgmlib.h  cgmmach.h  cgmout.h  cgmpar.h  cgmpoly.h  cgmps.h  cgmpts.h  cgmrand.h  cgmstruc.h  cgmtek.h  cgmtext.h  cgmtran.h  cgmtrap.h  cgmtypes.h  cgmuerr.h  cgmufont.h  mach.h  mc_linux.h
src/ralcgm/src/: cgmatt.c  cgmbez.c  cgmcell.c  cgmcolr.c  cgmerr.c  cgmfile.c  cgmfill.c  cgmfont.c  cgmgdp.c  cgmgraph.c  cgmher.c  cgmibin.c  cgmichar.c  cgminput.c  cgmitext.c  cgmlib.c  cgmmain.c  cgmobin.c  cgmochar.c  cgmops.c  cgmotext.c  cgmotpz.c  cgmpoly.c  cgmprof.c  cgmpts.c  cgmrand.c  cgmskel.c  cgmtext.c  cgmtrap.c
